# LEARNCAM

./: pyproject.toml
src/learncam/: main.py
